# eeg-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: BandPassFilter.h  FeatureExtractor.h  IPreprocessor.h  LSLAdapter.h  LSLOutput.h  RingBuffer.h
src/: BandPassFilter.cu  FeatureExtractor.cpp  LSLAdapter.cpp  LSLOutput.cpp  RingBuffer.cpp  main.cpp  ringbuffer_test.cpp
